deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desafio-sre
  template:
    metadata:
      labels:
        app: desafio-sre
    spec:
      containers:
      - name: desafio-sre
        image: gersontpc/desafio-sre-app:v1.0.0-x64
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 10
