service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-sre-service
spec:
  selector:
    app: desafio-sre
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
