ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-sre-ingress
spec:
  rules:
  - http:
      paths:
      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: desafio-sre-service
            port:
              number: 8080
